Fix table overflow issues

--- a/css/caseList.css
+++ b/css/caseList.css
@@ -14,6 +14,10 @@
 #bootstrap-theme .case-list-panel.case-is-focused {
   width: 15px;
 }
+#bootstrap-theme .case-list-table {
+  table-layout: fixed;
+  word-wrap: break-word;
+}
 #bootstrap-theme .case-list-table th,
 #bootstrap-theme .case-list-table td {
   padding: 10px;
@@ -68,6 +72,7 @@
   cursor: pointer;
   margin-top: -15px;
   overflow: hidden;
+  opacity: .8;
 }
 #bootstrap-theme .civicase-table-expander div {
   position: relative;
